# candidateparser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASING.md  cargo-config.toml.template  create-ndk-standalone.sh
.circleci/: config.yml
candidateparser/: Cargo.toml
candidateparser-android/: .gitignore  Makefile  README.md
candidateparser-android/app/: build.gradle
candidateparser-android/app/src/androidTest/java/ch/dbrgn/candidateparser/: CandidateParserTest.java
candidateparser-android/app/src/main/: AndroidManifest.xml
candidateparser-android/app/src/main/java/ch/dbrgn/candidateparser/: CandidateParser.java  IceCandidate.java
candidateparser-android/app/src/main/res/values/: strings.xml
candidateparser-android/gradle/wrapper/: gradle-wrapper.properties
candidateparser-ffi/: Cargo.toml  build.rs  candidateparser.h  candidateparser.hpp  cbindgen.toml  example.c  parse.c
candidateparser-ffi/examples/: Makefile
candidateparser-ffi/examples/c/: example.c
candidateparser-ffi/examples/cpp/: example.cpp
candidateparser-ffi/src/: lib.rs
candidateparser-jni/: Cargo.toml
candidateparser-jni/src/: lib.rs
candidateparser/src/: lib.rs  parsers.rs  types.rs
src/: lib.rs  parsers.rs  types.rs
