[package]
name = "candidateparser-ffi"
version = "0.2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/candidateparser"
license = "MIT OR Apache-2.0"
keywords = ["ice", "nat", "parser", "candidates", "webrtc", "stun", "turn"]
categories = ["parser-implementations", "network-programming"]
build = "build.rs"

[lib]
name = "candidateparser_ffi"
crate-type = ["cdylib"]

[dependencies]
candidateparser = "*"
libc = "^0.2"
clippy = {version = "*", optional = true}

[build-dependencies]
cbindgen = "0.1"

[features]
default = []
