[package]
name = "candidateparser"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
repository = "https://github.com/dbrgn/candidateparser"
license = "MIT OR Apache-2.0"
keywords = ["ice", "nat", "parser", "candidates", "webrtc", "stun", "turn"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
nom = { version = "3.2" }
clippy = {version = "*", optional = true}

[features]
default = []
