[package]
name = "candidateparser"
description = "A parser for the ICE Candidate SDP according to RFC5245."
version = "0.1.0"
repository = "https://github.com/dbrgn/candidateparser"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
keywords = ["ice", "nat", "parser", "candidates", "webrtc", "stun", "turn"]
categories = ["parser-implementations", "network-programming"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[dependencies]
nom = { version = "3.2" }
clippy = {version = "*", optional = true}

[features]
default = []
